# coding-agent

./: .gitignore  ARCHITECTURE_SPEC.md  BOUNDED_LLM_EDIT_PLAN.md  DOCKER_REARCH_PLAN.md  LITELLM_MIGRATION_SPEC.md  RUNS_PR_UX_SPEC.md  SEMANTIC_EDIT_PLAN.md  start.sh
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/agent_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_approval_type.py  0003_add_overridden_approval_status.py  0004_normalize_approval_status_labels.py
backend/app/: main.py
backend/app/api/: approvals.py  artifacts.py  dependencies.py  diff.py  edits.py  environments.py  events.py  files.py  patches.py  projects.py  prompting.py  proposals.py  pull_requests.py  repo.py  run_diff.py  run_meta.py  run_repo.py  runs.py  settings.py  stream.py
backend/app/db/: init_db.py  session.py
backend/scripts/: smoke_tests.py
backend/tests/: test_approval_flow.py  test_approval_status_enum_mapping.py  test_approvals_override.py  test_developer_agent_targeting.py  test_docker_runner.py  test_executor_approval_query.py  test_executor_filesystem_cleanup.py  test_executor_plan_context.py  test_executor_result_routing.py  test_executor_retries.py  test_executor_scope_controls.py  test_filesystem_planner.py  test_graph_workflow_resume.py  test_langgraph_checkpoint.py  test_plan_approval_payload.py  test_planning.py  test_planning_limits.py  test_run_failure_recording.py  test_run_status_lifecycle.py  test_settings_defaults.py  test_tokenizer.py
(+79 files in other folders)
