[project]
name = "agent-platform-backend"
version = "0.1.0"
description = "MVP backend for agent orchestration platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "langgraph>=0.2",
  "litellm>=1.51",
  "deepagents>=0.5",
  "langchain-openai>=1.1"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
